# xiao_ling_pai

./: README.md  实验报告.md  我的实验报告.md  鸿蒙大作业.docx
d1_iot_mqtt/: BUILD.gn  README_zh.md  iot_mqtt.c
d1_iot_mqtt/include/: e53_intelligent_agriculture.h  oc_mqtt.h  oc_mqtt_profile_package.h
d1_iot_mqtt/src/: e53_intelligent_agriculture.c  oc_mqtt.c  oc_mqtt_profile_package.c
服务端代码/: fake.py  server.py
服务端代码/static/js/: vue.js
服务端代码/templates/: index.html
