# Copyright (c) 2022 FuZhou Lockzhiner Electronic Co., Ltd. All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

static_library("iot_mqtt_example") {
    sources = [

        "src/e53_intelligent_agriculture.c",

        "iot_mqtt.c",
        "src/oc_mqtt.c",
        "src/oc_mqtt_profile_package.c",
    ]

    include_dirs = [

        "//utils/native/lite/include",
        "//third_party/cJSON",
        "//third_party/musl/porting/liteos_m/kernel/include",
        "//third_party/paho_mqtt/MQTTPacket/src",
        "//third_party/paho_mqtt/MQTTClient-C/src",
        "include",
    ]

    deps = [
        "//device/rockchip/hardware:hardware",
    ]
}
